--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,3 +11,5 @@
 @import "layout/style";
 @import "layout/header";
 @import "layout/index";
+@import "layout/_footer";
+@import "layout/_partners";
