added header / slider at main page

--- a/src/jade/_includes/_layout/_header.jade
+++ b/src/jade/_includes/_layout/_header.jade
@@ -1,5 +1,5 @@
 -var menu = ['Главная','Новости','Публикации','О компании','Контакты'];
-header
+header.header
 	.menu-line
 		.white-block
 		.container
@@ -12,3 +12,97 @@ header
 					input.search_input(name='search_query' type="text")
 					button.search_subm(type='submit')
 	.container.logo-line
+		a.logo(href='index.html' alt='Главная страница')
+			img(src='../img/icons/logo-header.svg')
+			span Международная Система Сертификации
+		.logo-line__content-wrap
+			.drop_down_menu
+				.init_block
+					span Услуги
+				.dropped-block
+					.dropped-block__title
+						| Cертификация ISO
+					ul.dropped-menu
+						li.dropped-menu__li
+							span.dropped-menu__li-title
+								| Сертификация систем менеджмента качества
+							ul.inner-drop-menu
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+						li.dropped-menu__li
+							span.dropped-menu__li-title
+								| ХАССП
+							ul.inner-drop-menu
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+						li.dropped-menu__li
+							span.dropped-menu__li-title
+								| Сертификация систем безопасности
+							ul.inner-drop-menu
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+						li.dropped-menu__li
+							span.dropped-menu__li-title
+								| Сертификация социальной ответсвенности и защиты окружающей среды
+					.dropped-block__title
+						| Cертификация продукции
+					ul.dropped-menu
+						li.dropped-menu__li
+							span.dropped-menu__li-title
+								| Сертификация систем менеджмента качества
+							ul.inner-drop-menu
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+						li.dropped-menu__li
+							span.dropped-menu__li-title
+								| Сертификация систем менеджмента качества
+							ul.inner-drop-menu
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+								li.inner-drop-menu__li
+									a(href='').inner-drop-menu__link
+										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+						li.dropped-menu__li
+							span.dropped-menu__li-title
+								| Сертификация систем менеджмента качества
+
+
+
+
+			.contancts-block
+				a(href='tel:+88129205990').contacts__link 8 (812) 920 59 90
+				a(href='mailto:mss-standart@mail.ru').contacts__link mss-standart@mail.ru
+			a(href='#').take-call.button-main-theme Заказать звонок
+
