--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,3 +1,29 @@
 extends _layout.jade
 block main
-	h1 Hello from main
+	.carousel-wrap
+		div(class="carousel-main")
+			.item
+				img.slider-content_bg(src='img/slider-content_bg1.jpg')
+				.slider-content-wrap
+					.slider-content
+						.slider-title-wrap
+							h2.slider-title
+							h3.slider-title ISO 91-2080...
+						.slider__content-nav
+							a.slider-buy.button-main-theme(href='#' alt='Заказать')
+								| Заказать
+							a.slider-details(href='#' alt='Подробнее')
+								|Подробнее
+			.item
+				img.slider-content_bg(src='img/slider-content_bg1.jpg')
+				.slider-content-wrap
+					.slider-content
+						.slider-title-wrap
+							h2.slider-title Сертификация
+							h3.slider-title ISO 9001-2015...
+						.slider__content-nav
+							a.slider-buy.button-main-theme(href='#' alt='Заказать')
+								| Заказать
+							a.slider-details(href='#' alt='Подробнее')
+								|Подробнее
+
