--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,3 +1,8 @@
+.header{
+	border-bottom: 1px solid #eaeced;
+	padding-bottom: 20px;
+}
+
 .menu-line {
 	background: #f9f9fa;
 	min-height: 45px;
@@ -28,11 +33,20 @@
 	.navigation-wrap {
 		padding-left: 332px;
 		position: relative;
-		&:before{
-			display: inline-block;
-			content: '';
+
+	}
+	.main-menu{
+		vertical-align: middle;
+		padding-left: 40px;
+		margin-right: 38px;
+		li {
+			line-height: 45px;
 		}
 	}
+	.search{
+		vertical-align: middle;
+	}
+
 }
 .main-menu {
 	color: #434a54;
@@ -43,9 +57,12 @@
 	&__li{
 		font-size: 16px;
 		display: inline-block;
-		margin: 0 19px;
+		margin-right: 38px;
 		&:last-of-type{
 			margin-right: 0;
+		}
+		&:hover {
+			color: #2e715f;
 		}
 	}
 	margin: 0;
@@ -70,5 +87,219 @@
 		width: 13px;
 		height: 13px;
 		background: url('../img/icons/search.svg');
+	}
+}
+.logo {
+	display: inline-block;
+	img {
+		display: inline-block;
+		width: 128px;
+		height: 127px;
+		vertical-align: middle;
+	}
+	span {
+		margin-left: 10px;
+		display: inline-block;
+		vertical-align: middle;
+		width: 146px;
+		color: $green;
+	    font-family: 'ubuntumedium';
+	    font-size: 18px;
+	}
+
+}
+.logo-line {
+	@include clearfix;
+	position: relative;
+	.logo{
+		float: left;
+		position: relative;
+		margin-top: -30px;
+		z-index: 2;
+	}
+	&__content-wrap {
+		float: right;
+		margin-top: 30px;
+	}
+}
+
+.drop_down_menu{
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 80px;
+	position: relative;
+	.dropped-block {
+		position: absolute;
+		top: 56px;
+		left: 2px;
+	}
+	.init_block.init_activated{
+		&+.dropped-block{
+			display: block;
+		}
+	}
+}
+.dropped-block {
+	z-index: 5;
+	display: none;
+	padding: 20px 0;
+	border: 1px solid #f0f0f1;
+	color: #434a54;
+    font-family: 'ubuntulight';
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    width: 278px;
+	background-color: rgb(249, 249, 250);
+	box-shadow: 0px 3px 6.51px 0.49px rgba(67, 74, 84, 0.68);
+
+	.dropped-block__title{
+		padding: 0 20px;
+		color: $green;
+	    font-family: 'ubuntumedium';
+	    font-size: 18px;
+	    margin-bottom: 15px;
+	}
+}
+
+.dropped-menu {
+	.dropped-menu__li{
+		position: relative;
+		&:last-of-type {
+			margin-bottom: 25px;
+		}
+	}
+	.dropped-menu__li-title {
+		display: block;
+		padding: 0 20px;
+		position: relative;
+		&:after{
+			display:none;
+			position: absolute;
+			top:-50px;
+			left:100%;
+			content: '';
+			width: 100px;
+			height: 300px;
+		}
+	}
+	.dropped-menu__li-title:hover {
+		background: #e9fcf2;
+		&+.inner-drop-menu{
+			display: block;
+		}
+		&:after{
+			display: block;
+		}
+	}
+	.inner-drop-menu {
+		display: none;
+		position: absolute;
+		left: 100%;
+		margin-left: 20px;
+		top: 0;
+		width: 287px;
+		background-color: rgb(249, 249, 250);
+		box-shadow: 0px 3px 6.51px 0.49px rgba(67, 74, 84, 0.68);
+		&:hover{
+			display: block;
+		}
+		&:before{
+			content: '';
+			display: block;
+			position: absolute;
+			width: 12px;
+			height: 29px;
+			left: -12px;
+			top: 0;
+			margin-top: 5px;
+			background: url('../img/icons/drop_block_arrow.png') center center no-repeat;
+
+		}
+	}
+}
+
+
+
+
+.init_block{
+	width: 280px;
+	background: #f9f9fa;
+	position: relative;
+	cursor: pointer;
+	@include border-radius(4px);
+	&:after {
+		content: '';
+		display: inline-block;
+		width: 10px;
+		height: 5px;
+		position: absolute;
+		right: 18px;
+		top: 22px;
+		background: url('../img/icons/arrow_drop.png') center center no-repeat;
+	}
+	span {
+		display: inline-block;
+		padding: 12px 16px 8px;
+	    font-family: 'ubuntumedium';
+		font-size: 18px;
+		color: $green;
+		width: 235px;
+		height: 46px;
+		border-right: 1px solid #f1f1f2;
+		&:before {
+			content: '';
+			display: inline-block;
+			background: url('../img/icons/drop_down-list.png') center center no-repeat;
+			width: 22px;
+			height: 15px;
+			line-height: 18px;
+			margin-right: 20px;
+		}
+	}
+}
+
+.contancts-block {
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 60px;
+	.contacts__link{
+		display: block;
+		font-size: 18px;
+	    font-family: 'ubuntumedium';
+		font-weight: 600;
+		color: #133c42;
+		line-height: 24px;
+
+	}
+
+}
+
+.take-call {
+	vertical-align: middle;
+
+	display: inline-block;
+	width: 202px;
+	padding: 12px 16px;
+
+}
+.button-main-theme {
+	@include border-radius(5px);
+	background-image: -moz-linear-gradient( -90deg, rgb(107,238,167) 0%, rgb(87,224,159) 46%, rgb(67,210,151) 100%);
+	background-image: -webkit-linear-gradient( -90deg, rgb(107,238,167) 0%, rgb(87,224,159) 46%, rgb(67,210,151) 100%);
+	background-image: -ms-linear-gradient( -90deg, rgb(107,238,167) 0%, rgb(87,224,159) 46%, rgb(67,210,151) 100%);
+	background-image: linear-gradient( -90deg, rgb(107,238,167) 0%, rgb(87,224,159) 46%, rgb(67,210,151) 100%);
+	font-size: 18px;
+	line-height: 22px;
+	font-family: 'ubuntumedium';
+	font-weight: 600;
+	text-align: center;
+	@include transition(0.25s);
+	&:hover {
+		background-image: -moz-linear-gradient( -180deg, rgb(67,210,151) 0%, rgb(87,224,159) 54%, rgb(107,238,167) 100%);
+		background-image: -webkit-linear-gradient( -180deg, rgb(67,210,151) 0%, rgb(87,224,159) 54%, rgb(107,238,167) 100%);
+		background-image: -ms-linear-gradient( -180deg, rgb(67,210,151) 0%, rgb(87,224,159) 54%, rgb(107,238,167) 100%);
+		background-image: linear-gradient( -180deg, rgb(67,210,151) 0%, rgb(87,224,159) 54%, rgb(107,238,167) 100%);
+
 	}
 }
