footer logo fixed

--- a/src/jade/_includes/_layout/_footer.jade
+++ b/src/jade/_includes/_layout/_footer.jade
@@ -6,7 +6,7 @@ footer.footer
 	.container
 		.footer__logo-wrap
 			a(href="#").footer__logo-link
-				img.footer__logo-img(src="img/icons/logo-footer2.svg", alt="")
+				img.footer__logo-img(src="img/icons/logo-footer.png", alt="")
 			p.footer__logo-dscr
 				| Международная Система Сертификации
 		.footer__service-items
