--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -5,22 +5,28 @@
 	min-height: 350px;
 	font-family: 'ubuntulight';
 	&__logo{
+		&-link{
+			display: inline-block;
+			vertical-align: middle;
+			margin-right: 10px;
+		}
 		&-wrap{
 			padding: 113.5px 0;
 			float: left;
-			// line-height: 350px;
 			position: relative;
 		}
 		&-img{
 			width: 123px;
 			height: 123px;
-			// vertical-align: middle;
 			float: left;
 		}
 		&-dscr{
+			@include font-size(14px);
+		    font-family: 'ubuntumedium';
 			width: 120px;
-			display: block;
-			float: left;
+			color: #858990;
+			display: inline-block;
+			vertical-align: middle;
 		}
 	}
 	&__service{
@@ -57,6 +63,9 @@
 			}
 			&--about{
 				width: 100px;
+			}
+			.h4{
+				color: #fff;
 			}
 		}
 
@@ -97,21 +106,3 @@
 		}
 	}
 }
-
-// .sprite {
-//     background-image: url(spritesheet.png);
-//     background-repeat: no-repeat;
-//     display: block;
-// }
-
-// .sprite-fb {
-//     width: 32px;
-//     height: 32px;
-//     background-position: -5px -5px;
-// }
-
-// .sprite-vk {
-//     width: 32px;
-//     height: 32px;
-//     background-position: -47px -5px;
-// }
