add About company and Services

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,3 +1,117 @@
 extends _layout.jade
 block main
-	h1 Hello from main
+	.container-inner
+		section.about-company
+			.section__title 
+				h1.h1 О компании
+			.about-company__descr «Международная Система Сертификации» - это добровольная система сертификации, применяемая в таких областях, как менеджмент качества работ и услуг, экологический, энергетический менеджмент, а также в других направлениях деятельности организаций как в Российской Федерации, так и за ее пределами. На сегодняшний день наличие сертификата ISO является одним из обязательных условий для заключения контрактов и участия в тендерах.
+			.about-company__shema
+				.shema__wrap
+					.shema__title 
+						h2.h2 Схема работы с клиентами
+					.shema__blocks-container
+						ul.shema__list
+							li.shema__item
+								a(href="#").shema__link.shema__img.img-number-1
+									img(src="img/shema1.png", alt="Shema")
+									.shema__descr Ваша заявка на получение сертификата
+							li.shema__item.shema__item_bottom
+								a(href="#").shema__link.shema__img.img-number-2
+									img(src="img/shema2.png", alt="Shema")
+									.shema__descr Согласование деталей
+							li.shema__item
+								a(href="#").shema__link.shema__img.img-number-3
+									img(src="img/shema3.png", alt="Shema")
+									.shema__descr Оплата счета за предоставяемые услуги
+							li.shema__item.shema__item_bottom
+								a(href="#").shema__link.shema__img.img-number-4
+									img(src="img/shema4.png", alt="Shema")
+									.shema__descr Оформление документации
+							li.shema__item
+								a(href="#").shema__link.shema__img.img-number-5
+									img(src="img/shema5.png", alt="Shema")
+									.shema__descr Получение результата
+		section.services
+			.section__title 
+				h1.h1 Предоставляемые услуги 
+			.services-block__wrap
+				.services-block__item
+					.serv__title 
+						h2.h2 Сертификация систем менеджмента качества
+					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+					a(href="#").more-links.link-btn 
+						span Подробнее
+					.serv__icon
+						img(src="img/iso.png", alt="Img") 
+				.services-block__item
+					.serv__title 
+						h2.h2 Сертификация систем менеджмента качества
+					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+					a(href="#").more-links.link-btn
+						span Подробнее 
+					.serv__icon
+						img(src="img/shield.png", alt="Img") 
+				.services-block__item
+					.serv__title 
+						h2.h2 Сертификация систем менеджмента качества
+					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+					a(href="#").more-links.link-btn
+						span Подробнее
+					.serv__icon
+						img(src="img/leaf.png", alt="Img") 
+				.services-block__item
+					.serv__title 
+						h2.h2 Сертификация систем менеджмента качества
+					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+					a(href="#").more-links.link-btn
+						span Подробнее
+					.serv__icon
+						img(src="img/tools.png", alt="Img") 
+				.services-block__item
+					.serv__title 
+						h2.h2 Сертификация систем менеджмента качества
+					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+					a(href="#").more-links.link-btn
+						span Подробнее
+					.serv__icon
+						img(src="img/note.png", alt="Img") 
+				.services-block__item
+					.serv__title 
+						h2.h2 Сертификация систем менеджмента качества
+					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+					a(href="#").more-links.link-btn
+						span Подробнее
+					.serv__icon
+						img(src="img/eac.png", alt="Img") 
+				.services-block__item
+					.serv__title 
+						h2.h2 Сертификация систем менеджмента качества
+					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+					a(href="#").more-links.link-btn
+						span Подробнее
+					.serv__icon
+						img(src="img/pct.png", alt="Img") 
+				.services-block__item
+					.serv__title 
+						h2.h2 Сертификация систем менеджмента качества
+					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+					a(href="#").more-links.link-btn
+						span Подробнее
+					.serv__icon
+						img(src="img/fire.png", alt="Img") 
+				.services-block__item
+					.serv__title 
+						h2.h2 Сертификация систем менеджмента качества
+					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+					a(href="#").more-links.link-btn
+						span Подробнее
+					.serv__icon
+						img(src="img/pen.png", alt="Img") 
+				
+
+
+
+
+
+
+
