--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -102,7 +102,7 @@
 		display: inline-block;
 		vertical-align: middle;
 		width: 146px;
-		color: $green;
+		color: $green-header;
 	    font-family: 'ubuntumedium';
 	    font-size: 18px;
 	}
@@ -155,7 +155,7 @@
 
 	.dropped-block__title{
 		padding: 0 20px;
-		color: $green;
+		color: $green-header;
 	    font-family: 'ubuntumedium';
 	    font-size: 18px;
 	    margin-bottom: 15px;
@@ -243,7 +243,7 @@
 		padding: 12px 16px 8px;
 	    font-family: 'ubuntumedium';
 		font-size: 18px;
-		color: $green;
+		color: $green-header;
 		width: 235px;
 		height: 46px;
 		border-right: 1px solid #f1f1f2;
