--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -1,9 +1,7 @@
 .carousel-wrap {
 	width: 100%;
-	max-height: 400px;
 	margin: 0 auto;
 	position: relative;
-    margin-bottom: 60px;
     visibility: hidden;
     @include opacity(0);
     @include transition(3s);
@@ -12,7 +10,7 @@
     }
     .slider-content_bg{
     	width: 100%;
-    	height: auto;
+    	height: 455px;
     	position: absolute;
     	top: 0;
     	left: 0;
@@ -42,41 +40,18 @@
 		right: 30px;
 	}
 	.owl-next,
-	.owl-prev,
-	.owl-dot{
+	.owl-prev{
 		@include opacity(1);
 	}
 	.owl-next:hover,
-	.owl-prev:hover,
-	.owl-dot:hover{
+	.owl-prev:hover{
 		@include opacity(0.5);
 		@include transition(.25s);
 	}
 	.owl-dots {
-		position: absolute;
-		width: 100%;
-		text-align: center;
-	    bottom: 14px;
-
-		.active {
-			width: 12px;
-			height: 12px;
-			background: white;
-			@include border-radius(50%);
-			border: none;
-		}
-
+		display: none;
 	}
-	.owl-dot {
-		float:none;
-	    margin-right: 20px;
-	    width: 12px;
-	    height: 12px;
-	    border: 2px solid #fff;
-	    border-radius: 50%;
-	    background-clip: padding-box;
-	    display: inline-block;
-	}
+
 
 	.slider-content-wrap {
 		position: relative;
@@ -117,10 +92,136 @@
 			@include border-radius(3px);
 			padding: 8px 25px;
 			vertical-align: middle;
+			@include transition(.25s);
 		}
 		.slider-details:hover {
-			@include opacity(0.7);
-			@include transition(.25s);
+			background: #133c42;
+			color: #fff;
 		}
 	}
 }
+
+.last-news-wrap{
+	position: relative;
+	&:before{
+		position: absolute;
+		content: '';
+		display: block;
+		width: 100%;
+		top:0;
+		bottom: 0;
+		left: -50%;
+		background: #f9f9fa;
+		-webkit-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
+		-moz-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
+		box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
+	}
+}
+
+.last-news-wrap {
+	position: relative;
+	.container{
+		position: relative;
+		z-index: 2;
+		@include clearfix;
+		padding: 45px 0;
+	}
+	.news-wrap{
+		display: inline-block;
+		float: left;
+		width: 50%;
+		padding-right: 15px;
+	}
+	.publications-wrap{
+		display: inline-block;
+		float: right;
+		width: 50%;
+		padding-left: 15px;
+
+	}
+
+}
+.publications-wrap,
+.news-wrap{
+	@include clearfix;
+	.read-all{
+		float: right;
+	}
+}
+.news-wrap{
+	.read-all{
+		float: right;
+		margin-right: 30px;
+	}
+}
+.publications-wrap{
+	.news-block{
+		margin-left: 15px;
+	}
+
+}
+.news-block{
+	width: 495px;
+	margin-bottom: 34px;
+	color: #434a54;
+	.news__img-line{
+		margin-bottom: 20px;
+		.news-img{
+			display: inline-block;
+			vertical-align: top;
+			width: 81px;
+			height: 81px;
+			margin-right: 13px;
+			img{
+				width: 100%;
+				height: 100%;
+			}
+		}
+		.news__img-line_datails{
+			display: inline-block;
+			vertical-align: top;
+			padding-top: 15px;
+			color: #434a54;
+		}
+		.news-date,
+		.news-title{
+			display: block;
+		}
+		.news-date{
+			font-size: 12px;
+		    font-family: 'ubuntulight';
+		    line-height: 24px;
+		}
+		.news-title{
+		    font-family: 'ubuntubold';
+		    line-height: 24px;
+		}
+	}
+	.news__content{
+		font-size: 14px;
+		line-height: 20px;
+		.more-links span {
+			text-decoration: none;
+		}
+	}
+}
+
+		.read-all {
+			display: inline-block;
+		    font-family: 'ubuntumedium';
+		    font-weight: 600;
+		    line-height: 20px;
+		    font-size: 14px;
+			display: inline-block;
+			text-align: center;
+			color: #133c42;
+			border: 2px solid #133c42;
+			@include border-radius(3px);
+			padding: 3px 14px;
+			vertical-align: middle;
+			@include transition(.25s);
+			&:hover {
+				background: #133c42;
+				color: #fff;
+			}
+		}
