--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -5,6 +5,7 @@
 	text-align: center;
 }
 .about-company{
+	padding-top: 60px;
 	&__title{
 		text-align: center;
 	}
@@ -165,6 +166,7 @@
 	.owl-nav{
 		position: absolute;
 		top:50%;
+		margin-top: -27px;
 		left: 0;
 		width: 100%;
 		text-align: justify;
@@ -172,27 +174,28 @@
 
 	.owl-prev{
 		display: inline-block;
-		// background: url('../img/icons/arrow_left.svg');
-		width: 30px;
-		height: 30px;
+		background: url('../img/arrow_slider-main.png');
+		@include rotate(-180);
+		width: 54px;
+		height: 54px;
 		position: absolute;
 		left: 30px;
 	}
 	.owl-next{
 		display: inline-block;
-		// background: url('../img/icons/arrow_right.svg');
-		width: 30px;
-		height: 30px;
+		background: url('../img/arrow_slider-main.png');
+		width: 54px;
+		height: 54px;
 		position: absolute;
 		right: 30px;
 	}
 	.owl-next,
 	.owl-prev{
-		@include opacity(1);
+		@include opacity(0.5);
 	}
 	.owl-next:hover,
 	.owl-prev:hover{
-		@include opacity(0.5);
+		@include opacity(1);
 		@include transition(.25s);
 	}
 	.owl-dots {
