--- a/src/jade/_includes/_layout/_header.jade
+++ b/src/jade/_includes/_layout/_header.jade
@@ -13,7 +13,7 @@ header.header
 					button.search_subm(type='submit')
 	.container.logo-line
 		a.logo(href='index.html' alt='Главная страница')
-			img(src='../img/icons/logo-header.svg')
+			img(src='img/icons/logo-header.svg')
 			span Международная Система Сертификации
 		.logo-line__content-wrap
 			.drop_down_menu
