--- a/src/jade/_includes/_layout/_partners.jade
+++ b/src/jade/_includes/_layout/_partners.jade
@@ -8,78 +8,78 @@ section.partners
 				.item
 					.img-wrap
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 				.item
 					.img-wrap
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 				.item
 					.img-wrap
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
 						.img-item
-							img(src="../img/icons/slide-item.png", alt="")
+							img(src="img/icons/slide-item.png", alt="")
