Variable changes in dropdown-menu, wrapper and others

--- a/src/jade/_includes/_layout/_header.jade
+++ b/src/jade/_includes/_layout/_header.jade
@@ -24,7 +24,7 @@ header.header
 						| Cертификация ISO
 					ul.dropped-menu
 						li.dropped-menu__li
-							span.dropped-menu__li-title
+							a.dropped-menu__li-title(href='#' alt='роздел')
 								| Сертификация систем менеджмента качества
 							ul.inner-drop-menu
 								li.inner-drop-menu__li
@@ -37,7 +37,7 @@ header.header
 									a(href='').inner-drop-menu__link
 										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
 						li.dropped-menu__li
-							span.dropped-menu__li-title
+							a.dropped-menu__li-title(href='#' alt='роздел')
 								| ХАССП
 							ul.inner-drop-menu
 								li.inner-drop-menu__li
@@ -50,7 +50,7 @@ header.header
 									a(href='').inner-drop-menu__link
 										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
 						li.dropped-menu__li
-							span.dropped-menu__li-title
+							a.dropped-menu__li-title(href='#' alt='роздел')
 								| Сертификация систем безопасности
 							ul.inner-drop-menu
 								li.inner-drop-menu__li
@@ -63,13 +63,13 @@ header.header
 									a(href='').inner-drop-menu__link
 										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
 						li.dropped-menu__li
-							span.dropped-menu__li-title
+							a.dropped-menu__li-title(href='#' alt='роздел')
 								| Сертификация социальной ответсвенности и защиты окружающей среды
 					.dropped-block__title
 						| Cертификация продукции
 					ul.dropped-menu
 						li.dropped-menu__li
-							span.dropped-menu__li-title
+							a.dropped-menu__li-title(href='#' alt='роздел')
 								| Сертификация систем менеджмента качества
 							ul.inner-drop-menu
 								li.inner-drop-menu__li
@@ -82,7 +82,7 @@ header.header
 									a(href='').inner-drop-menu__link
 										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
 						li.dropped-menu__li
-							span.dropped-menu__li-title
+							a.dropped-menu__li-title(href='#' alt='роздел')
 								| Сертификация систем менеджмента качества
 							ul.inner-drop-menu
 								li.inner-drop-menu__li
@@ -95,7 +95,7 @@ header.header
 									a(href='').inner-drop-menu__link
 										| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
 						li.dropped-menu__li
-							span.dropped-menu__li-title
+							a.dropped-menu__li-title(href='#' alt='роздел')
 								| Сертификация систем менеджмента качества
 
 
