--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -97,7 +97,7 @@
 		position: relative;
 		width: 250px;
 		min-height: 220px;
-		padding: 20px 20px 80px 20px;
+		padding: 20px 20px 40px 20px;
 		@include border-radius (5px);
 		box-shadow: 0px 1px 5px 0px rgba(67, 74, 84, 0.75);
 		margin-bottom: 30px;
@@ -163,12 +163,15 @@
     	top: 0;
     	left: 0;
     }
+    .owl-controls{
+    	margin: 0 auto;
+	    width: 1170px;
+    }
 	.owl-nav{
 		position: absolute;
 		top:50%;
-		margin-top: -27px;
-		left: 0;
-		width: 100%;
+		margin: -27px auto 0;
+		width: 1170px;
 		text-align: justify;
 	}
 
@@ -392,12 +395,10 @@
 	@extend .container;
 	text-align: center;
 }
-.global-wrapper-bg{
-	position: relative;
-		background: url(../img/bg.svg);
-		-webkit-background-size: cover;
-		background-size: cover;
-		display: block;
-		height: 100%;
+// .global-wrapper-bg{
+// 	position: relative;
 
-}
+// 		display: block;
+// 		height: 100%;
+
+// }
