--- a/src/sass/layout/_style.scss
+++ b/src/sass/layout/_style.scss
@@ -44,9 +44,20 @@ body{
 }
 .wrapper{
 	min-width: 1200px;
-	background: url(../img/bg.svg);
-	-webkit-background-size: cover;
-	background-size: cover;
+	position: relative;
+	&:before{
+		content: '';
+		position: absolute;
+		display: block;
+		width: 100%;
+		background: url(../img/bg.svg);
+		-webkit-background-size: cover;
+			background-size: cover;
+		bottom: 0;
+		top: 0;
+		@include opacity(.5);
+		z-index: -5;
+	}
 }
 
 .container {
