box-shadow fixed

--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -256,12 +256,9 @@
 .last-news{
 	padding-bottom: 55px;
 }
-.last-news-wrap{
-	position: relative;
-}
-
 .last-news-wrap {
 	overflow: hidden;
+	padding-bottom: 8px;
 	position: relative;
 	.container{
 		position: relative;
