--- a/src/sass/layout/_style.scss
+++ b/src/sass/layout/_style.scss
@@ -53,9 +53,10 @@ body{
 		background: url(../img/bg.svg);
 		-webkit-background-size: cover;
 			background-size: cover;
+		background-position-x: 27%;
 		bottom: 0;
 		top: 0;
-		@include opacity(.5);
+		@include opacity(.2);
 		z-index: -5;
 	}
 }
