--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -97,16 +97,15 @@
 		position: relative;
 		width: 250px;
 		min-height: 220px;
-		padding: 20px 20px 40px 20px;
+		padding: 20px 20px 60px 20px;
 		@include border-radius (5px);
-		box-shadow: 0px 1px 5px 0px rgba(67, 74, 84, 0.75);
+		box-shadow: 0px 1px 10px 0px rgba(67, 74, 84, 0.75);
 		margin-bottom: 30px;
-		transition: .25s;
 		background: #fff;
 	}
 	&__item:hover{
+		@include transition(.25s);
 		cursor: pointer;
-		box-shadow: 0px 1px 10px 0px rgba(67, 74, 84, 0.75);
 		background: $lime;
 	}
 }
