--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -179,4 +179,90 @@ block main
 									a.more-info(href='#' alt='больше') ...
 					a(href='#' alt='читать все').read-all
 						| Читать все публикации
+	section.partners
+		.container
+			.partners__title
+				h1.h1
+					| Наши партнеры
+			.gallery-wrap
+				.gallery-banners
+					.item
+						.img-wrap
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+					.item
+						.img-wrap
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+					.item
+						.img-wrap
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+							.img-item
+								img(src="img/icons/slide-item.png", alt="")
+
 
