--- a/src/jade/_includes/_layout/_header.jade
+++ b/src/jade/_includes/_layout/_header.jade
@@ -7,7 +7,7 @@ header.header
 					li.main-menu__li
 						a(href='#' alt='Главная') Главная
 					li.main-menu__li
-						a(href='#' alt='Новости') Новости
+						a(href='news.html' alt='Новости') Новости
 					li.main-menu__li
 						a(href='#' alt='Публикации') Публикации
 					li.main-menu__li
