--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -29,7 +29,7 @@ block main
 	section.about-company
 		.container-inner
 			.section__title
-				h1.h1 О компании
+				h1.h1-und О компании
 			.about-company__descr «Международная Система Сертификации» - это добровольная система сертификации, применяемая в таких областях, как менеджмент качества работ и услуг, экологический, энергетический менеджмент, а также в других направлениях деятельности организаций как в Российской Федерации, так и за ее пределами. На сегодняшний день наличие сертификата ISO является одним из обязательных условий для заключения контрактов и участия в тендерах.
 			.about-company__shema
 				.shema__wrap
@@ -60,7 +60,7 @@ block main
 	.container-inner
 		section.services
 			.section__title
-				h1.h1 Предоставляемые услуги
+				h1.h1-und Предоставляемые услуги
 			.services-block__wrap
 				.services-block__item
 					.serv__title
@@ -137,7 +137,7 @@ block main
 
 	.last-news
 		.last-news__title
-			h1.h1
+			h1.h1-und
 				| Последние новости
 		.last-news-wrap
 			.container
@@ -182,7 +182,7 @@ block main
 	section.partners
 		.container
 			.partners__title
-				h1.h1
+				h1.h1-und
 					| Наши партнеры
 			.gallery-wrap
 				.gallery-banners
