company.html in process

--- a/src/jade/company.jade
+++ b/src/jade/company.jade
@@ -9,3 +9,14 @@ block main
 					a.breadcrumbs__link.breadcrumbs__link_active(href="#") О компании
 		.section__title
 			h1.h1 О компании
+	.container.main-menu.about-company-menu
+		li.main-menu__li
+			a(href='#' alt='Главная') Главная
+		li.main-menu__li
+			a(href='#' alt='Новости') Новости
+		li.main-menu__li
+			a(href='#' alt='Публикации') Публикации
+		li.main-menu__li
+			a(href='company.html' alt='О компании') О компании
+		li.main-menu__li
+			a(href='#' alt='Контакты') Контакты
