--- a/src/sass/layout/_style.scss
+++ b/src/sass/layout/_style.scss
@@ -64,7 +64,7 @@ body{
 .container {
 	min-width: 1200px;
 	max-width: 1200px;
-	margin: 0 auto;
+	margin: 0 auto !important;
 	padding: 0 15px;
 	@include clearfix();
 }
