svg added/company.html - 70%

--- a/src/sass/layout/_company.scss
+++ b/src/sass/layout/_company.scss
@@ -30,3 +30,376 @@
 		}
 	}
 }
+.about-company-title{
+	padding-top: 32px;
+	background: #fff;
+}
+
+.container.main-menu{
+	display: block;
+}
+.about-company-menu{
+	margin-bottom: 60px;
+	width: 100%;
+	height: 50px;
+	background-color: rgb(249, 249, 250);
+	box-shadow: 0px 3px 2.88px 0.12px rgba(131, 131, 131, 0.2);
+}
+
+.menu-line{
+	height: 100%;
+	color: #434a54;
+	font-family: 'ubuntumedium';
+	list-style: none;
+	font-size: 0px;
+	&__li {
+		font-size: 16px;
+		display: inline-block;
+		margin:14px 38px 14px 0;
+		&:last-of-type{
+			margin-right: 0;
+		}
+		&:hover {
+			color: #2e715f;
+		}
+		a {
+			padding: 14px 0;
+		}
+	}
+	margin: 0;
+	&_active{
+		color: #019875;
+	}
+
+}
+
+.accred {
+	overflow: hidden;
+	padding-bottom: 60px;
+	position: relative;
+	.container{
+		position: relative;
+		z-index: 2;
+		@include clearfix;
+		padding: 45px 15px;
+		display: table;
+	}
+	.accred-sertif{
+		display: table-cell;
+		width: 50%;
+		padding: 0 15px;
+	}
+	.accred-text-wrap{
+		display: table-cell;
+		width: 50%;
+		padding: 0 15px 0 30px;
+
+	}
+	&__title {
+		text-align: center;
+	}
+
+}
+.accred-text-wrap,
+.accred-sertif{
+	@include clearfix;
+}
+.accred-text-wrap,
+.accred-sertif{
+		&:before{
+			@include transition(.25s);
+		}
+		&:hover:before{
+			position: absolute;
+			content: '';
+			display: block;
+			width: 100%;
+			top:0;
+			bottom: 0;
+			background: #e9fcf2;
+			-webkit-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
+			-moz-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
+			box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
+			z-index:-2;
+	}
+}
+.accred-sertif{
+	&:hover:before{
+		left: -50%;
+	}
+}
+.accred-text-wrap{
+	&:hover:before{
+			right: -50%;
+	}
+	p{
+		margin-bottom: 28px;
+	}
+
+}
+
+.sertif-wrap{
+	display: inline-block;
+	width: 242px;
+	height: 345px;
+	margin-right: 18px;
+	&:last-of-type{
+		margin-right: 0;
+	}
+	img {
+		border: 2px solid #fff;
+		max-width: 100%;
+		max-height: 100%;
+	}
+}
+
+.after-title-block{
+	text-align: center;
+	margin-bottom: 50px;
+}
+
+.specialists{
+	margin-bottom: 80px;
+}
+.specialist__img-wrap{
+	background-color: rgb(249, 249, 250);
+	box-shadow: 0px 1px 5px 0px rgba(67, 74, 84, 0.2);
+	width: 264px;
+	height: 338px;
+	img{
+		max-width: 100%;
+		max-height: 100%;
+	}
+}
+.specialist__list{
+	@include clearfix;
+	margin-left: -30px;
+	.specialist-wrap{
+		color: #434a54;
+		display: inline-block;
+		float: left;
+		margin-left: 30px;
+		vertical-align: top;
+		width: 266px;
+	}
+	.specialist__name{
+		font-family: 'ubuntubold';
+		font-size: 24px;
+	}
+	.specialist__data{
+		min-height: 36px;
+		line-height: 18px;
+	}
+}
+
+.specialists__title,
+.sertificats__title,
+.feedbacks__title{
+	text-align: center;
+}
+.sertificats__list{
+	@include clearfix;
+	margin-left: -20px;
+
+	.sertificat-wrap{
+		display: inline-block;
+		float: left;
+		margin-left: 20px;
+	}
+
+}
+
+.sertificat__img-wrap{
+	box-shadow: 0px 1px 5px 0px rgba(67, 74, 84, 0.2);
+	width: 218px;
+	height: 304px;
+	display: block;
+}
+.light-b__init{
+	position: relative;
+	&:hover:before{
+		content: '';
+		z-index:1;
+		position: absolute;
+		top:0;
+		bottom:0;
+		width: 100%;
+		background: rgba(132, 137, 144, 0.3);
+	}
+	&:hover:after{
+		content: url("../img/icons/loupe.svg");
+		z-index:1;
+		position: absolute;
+		top:50%;
+		left:50%;
+		width: 20px;
+		height: 20px;
+		margin-left: -10px;
+		margin-top: -10px;
+	}
+
+}
+
+.sertificats-wrap{
+	margin-bottom: 55px;
+}
+.feedbacks-wrap{
+	background: rgba(233, 252, 243, 0.7);
+	padding-top: 60px;
+}
+
+.feedback__company-name{
+	font-size: 24px;
+	font-family: 'ubuntubold';
+	color: rgb(67, 74, 84);
+	line-height: 1.5;
+	padding: 0 160px 0 50px;
+	margin-bottom: 65px;
+
+}
+.feedback__text-wrap{
+	padding: 25px;
+	display: inline-block;
+	vertical-align: top;
+	width: 555px;
+	@icnlude border-radius(5px);
+	background-color: rgb(255, 255, 255);
+	box-shadow: 0px 1px 5px 0px rgba(67, 74, 84, 0.2);
+	position: relative;
+	margin-left: 33px;
+	margin-bottom: 50px;
+	.feedback__text{
+		margin-bottom: 25px;
+	}
+	.feedback__author{
+		padding-left: 65px;
+		color: $green;
+		font-size: 16px;
+		font-family: 'ubuntubold';
+	}
+}
+.feedback__author-photo{
+	text-align: center;
+	position: absolute;
+	bottom: -50px;
+	left: -30px;
+	z-index: 1;
+	width: 100px;
+	height: 100px;
+	@include border-radius(50%);
+	box-shadow: 0px 1px 5px 0px rgba(67, 74, 84, 0.75);
+	background: #fff;
+}
+.feedback__img-block{
+	display: inline-block;
+	margin-left: 35px;
+	vertical-align: top;
+	.feedback__img-wrap{
+		display: inline-block;
+		box-shadow: 0px 1px 5px 0px rgba(67, 74, 84, 0.2);
+		width: 243px;
+		height: 313px;
+		margin-left: 26px;
+		img{
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
+}
+
+.feedbacks-owl{
+	margin-bottom: 70px;
+	    .owl-controls{
+    	margin: 0 auto;
+	    width: 100%;
+    }
+	.owl-nav{
+		position: absolute;
+		top:31px;
+		margin: -27px auto 0;
+		width: 100%;
+		text-align: justify;
+	}
+
+	.owl-prev{
+		display: inline-block;
+		@include border-radius(4px);
+		border: 1px solid #434a54;
+		width: 31px;
+		height: 31px;
+		text-align: center;
+		position: absolute;
+		line-height: 28px;
+		left: 0;
+		&:hover{
+			background: rgba(255, 255, 255, 0.3);
+		}
+		&:after{
+			display: inline-block;
+			content: '';
+			width: 7px;
+			height: 13px;
+			background: url('../img/icons/arrov_grey.png') no-repeat;
+			vertical-align: middle;
+			@include rotate(180);
+		}
+
+	}
+	.owl-next{
+		display: inline-block;
+		position: absolute;
+		border: 1px solid #434a54;
+		font-size: 12px;
+		line-height: 14px;
+		font-family: 'ubuntumedium';
+		&:hover{
+			background: rgba(255, 255, 255, 0.3);
+		}
+		@include border-radius(4px);
+		right: 0;
+		padding: 8px 10px;
+		&:before{
+			content: 'Читать следующий';
+			display: inline-block;
+		}
+		&:after{
+			display: inline-block;
+			content: '';
+			width: 7px;
+			height: 13px;
+			background: url('../img/icons/arrov_grey.png') no-repeat;
+			vertical-align: middle;
+			margin-left: 5px;
+		}
+	}
+	.owl-next,
+	.owl-prev{
+		@include opacity(0.5);
+	}
+	.owl-next:hover,
+	.owl-prev:hover{
+		@include opacity(1);
+		@include transition(.25s);
+	}
+	.owl-dots {
+		display: none;
+	}
+}
+
+
+.our-partners{
+	background: rgba(47, 163, 119, 0.8);
+	padding: 70px;
+	.partners__title{
+		.h1-und{
+			color: white;
+		}
+		margin-bottom: 45px;
+	}
+	.img-item{
+		margin-bottom: 0 !important;
+	}
+	.owl-controls{
+		margin-top: 45px;
+	}
+}
