--- a/src/sass/layout/_news.scss
+++ b/src/sass/layout/_news.scss
@@ -1,5 +1,126 @@
-.news__title{
-	.h1:after{
-		content:"";
+.news__with-pictures_wrap{
+	display: inline-block;
+	text-align: justify;
+}
+.justify{
+	width: 100%;
+	display: inline-block;
+}
+.picture-page-news{
+	position: relative;
+	overflow: hidden;
+	width: 48.5%;
+	height: 50%;
+	img{
+		max-width: 100%;
+		max-height: 100%;
 	}
+}
+.picture__descr{
+	position: absolute;
+	width: 400px;
+	min-height: 110px;
+	bottom:60px;
+	left:-20px;
+	padding: 20px 30px;
+	background: rgba(249, 249, 250, 0.8);
+	@include border-radius(5px);
+	.date{
+		margin-bottom: 15px;
+	}
+	.descr{
+		font-family: 'ubuntubold';
+		@include font-size(16px);
+	}
+	&:hover > .descr{
+		text-decoration: underline;
+	}
+}
+.news-page-news{
+	width: 48.5%;
+}
+.picture-page-news,
+.news-page-news{
+	display: inline-block;
+	vertical-align: top;
+}
+// Стили для секции со новостями без больших картинок
+.news__wrap-without-pictures{
+	margin-bottom: 60px;
+}
+.news__without-pictures{
+	.news-block{
+		width: 100%;
+	}
+}
+.news__without-pictures{
+	background: rgba(249, 249, 250, 0.75);
+	padding-top: 55px;
+	.news-block{
+		border-bottom: 1px solid $lightgray;
+	}
+	.news__img-line{
+		@include clearfix();
+	}
+	.news-img,
+	.news__img-line_datails{
+		display: block !important;
+	    padding-top: 0 !important;
+	    overflow: hidden !important;
+	}
+	.news-img{
+		float:left;
+		margin-right: 35px !important;
+	}
+	.news__img-line_datails{
+		padding-bottom:43px !important;
+	}
+}
+// Пагинация
+.padination-wrap{
+	display: block;
+	text-align: right;
+	margin-bottom: 29px;
+	font-family: 'ubuntumedium';
+	font-weight: 600;
+	& li {
+		display: inline-block;
+		vertical-align: top;
+	}
+	& li:first-child{
+		margin-right: 15px;
+	}
+	& li:last-child{
+		margin-left: 15px;
+	}
+	.pagination-link{
+		display: block;
+		width: 20px;
+		height: 20px;
+		text-align: center;
+		padding-top: 1px;
+		@include border-radius(5px);
+		@include transition(0.25s);
+		user-select: none;
+		-moz-user-select: none;
+		-webkit-user-select: none;
+		color: $dark;
+		&:hover {
+			background: #f1f1f1;
+		}
+		&.active{
+			background: $dark;
+			color: #fff;
+		}
+		&.prev{
+			background: url(../img/prev.png) 50% 50% no-repeat;
+			background-size: cover;
+		}
+		&.next{
+			@include rotate(180);
+			background: url(../img/prev.png) 50% 50% no-repeat;
+			background-size: cover;
+		}
+	}
+
 }
